# tanmatsu-launcher

./: optional_plugins_status.md
components/plugin-api/: CMakeLists.txt
components/plugin-api/include/: tanmatsu_plugin.h
main/: CMakeLists.txt  Kconfig  app_management.c  audio_mixer.c  audio_mixer.h  global_event_handler.c  main.c  plugin_api.c  plugin_manager.c  plugin_manager.h  radio_ota.c
main/menu/: apps.c  home.c  menu_repository_client.c  menu_repository_client_project.c  message_dialog.c
sdkconfigs/: konsool  tanmatsu
tools/plugin-sdk/lib/: libplugin_stubs.c
